# PhenoAppl

./: CMakeLists.txt  Makefile  README.md  dem.cpp  devoir3.sln  devoir3.vcxproj  devoir3.vcxproj.filters  eulerintegrator.cpp  eulerintegrator.h  parser.cpp  parser.h  particlesbase.cpp  particlesbase.h  particlesdem.cpp  particlesdem.h  particlesspring.cpp  particlesspring.h  plotMassFlow.py  solutionExporterLagrangian.cpp  solutionExporterLagrangian.h  tests.cpp  tests.h  velocityverletintegrator.cpp  velocityverletintegrator.h
resources/: parameter.xml
